# MageML

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.py  generateclasses.py
celux/: filters.pyi
docs/: BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  INSTALLATION.md  NODES.md
include/CeLux/: CxCore.hpp  Factory.hpp  TensorBuilder.hpp  magic_enum.hpp
include/CeLux/backends/: Decoder.hpp  Decoders.hpp  Encoder.hpp
include/CeLux/conversion/: Conversion.hpp  IConverter.hpp
include/CeLux/conversion/cpu/: CPUConverter.hpp  CPUConverters.hpp
include/CeLux/error/: CxException.hpp
include/CeLux/filters/: FilterBase.hpp
include/CeLux/python/: GUIReader.hpp
include/MageML/: CxCore.hpp  Factory.hpp  Frame.hpp  Logger.hpp  TensorBuilder.hpp
include/MageML/backends/: Decoder.hpp  Decoders.hpp  Encoder.hpp
include/MageML/backends/cpu/: Decoder.hpp
include/MageML/conversion/: Conversion.hpp  IConverter.hpp
include/MageML/conversion/cpu/: AutoToRGB.hpp  CPUConverter.hpp  RGBToAuto.hpp
include/MageML/core/: GUIReader.hpp  VideoEncoder.hpp
include/MageML/error/: CxException.hpp
python/: celux.cp312-win_amd64.pyd  celux.cp313-win_amd64.pyd
src/CeLux/backends/: Decoder.cpp
src/CeLux/python/: Bindings.cpp  GUIReader.cpp  VideoReader.cpp
src/CeLuxGUI/: GUIApp.cpp  GUIApp.hpp  NodeBase.hpp  Nodes.hpp  TensorNodes.hpp  VideoNodes.hpp  main.cpp
src/CeLuxGUI/core/: Cache.hpp  GraphManager.cpp  GraphManager.hpp  Node.hpp  builders.cpp  icons.h
src/CeLuxGUI/nodes/: RenderPreviewNode.cpp  RenderPreviewNode.hpp  TensorNodes.hpp  VideoPipeline.cpp  VideoPipeline.hpp  VideoReaderNode.cpp  VideoReaderNode.hpp
src/MageML/: Frame.cpp  Logger.cpp
src/MageML/backends/: Decoder.cpp  Encoder.cpp
src/MageML/core/: GUIReader.cpp  VideoEncoder.cpp
src/MageMLGUI/: main.cpp
src/MageMLGUI/core/: builders.cpp  builders.h
src/MageMLGUI/nodes/: EncoderPipeline.cpp  EncoderPipeline.hpp  VideoPipeline.cpp  VideoPipeline.hpp
tests/benchmarks/: testspeed.py
